samples/_failures_safe/1761562976_e6b2b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18c1cd6b.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_18c1cd6b.c:130:9: error: expected declaration or statement at end of input
  130 |         for (int j = 0; j < a->cols; j++) {
      |         ^~~
./samples/SAFE/__tmp_18c1cd6b.c:130:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_18c1cd6b.c:130:9: error: expected declaration or statement at end of input
